# welsh

./: flash.py  pyproject.toml  unit-1.csv  unit-2.csv  unit-3.csv  unit-4.csv  unit-5.csv  unit-6.csv  unit-7.csv  unit-8.csv  words-simple.tsv  words.csv  words.txt  words.yaml  words2yaml.py  yaml2csv.py  yaml2tsv.py
full-vocab-list/: mynediad.csv  mynediad.json
